UPDATE : 실습실 추가 정보 추가

--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -14,6 +14,11 @@
         android:layout_height="match_parent"
         android:layout_weight="1">
 
+
+
+
+
+        <!-- LAYOUT 인트로 1 -->
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -23,7 +28,7 @@
             >
 
             <TextView
-                android:id="@+id/text1"
+                android:id="@+id/intro1_text1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="실습실 예약"
@@ -36,7 +41,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 />
             <TextView
-                android:id="@+id/text2"
+                android:id="@+id/intro1_text2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="이젠 폰으로 하자"
@@ -46,11 +51,11 @@
                 android:includeFontPadding="false"
 
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/text1"
+                app:layout_constraintTop_toBottomOf="@id/intro1_text1"
                 />
 
             <TextView
-                android:id="@+id/text3"
+                android:id="@+id/intro1_text3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
@@ -62,78 +67,111 @@
                 android:textSize="16dp"
 
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/text2" />
+                app:layout_constraintTop_toBottomOf="@+id/intro1_text2" />
 
-            <View
+            <ImageView
                 android:id="@+id/reservImg"
-                android:layout_width="308dp"
-                android:layout_height="271dp"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 android:layout_gravity="center"
-                android:background="@drawable/ic_mobile_reservation"
+
+                android:adjustViewBounds="true"
+                android:src="@drawable/ic_mobile_reservation"
 
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/text3"
+                app:layout_constraintTop_toBottomOf="@id/intro1_text3"
                 app:layout_constraintVertical_bias="0.4" />
         </androidx.constraintlayout.widget.ConstraintLayout>
+        <!-- LAYOUT END 인트로 1 -->
 
-        <LinearLayout
+
+        <!-- LAYOUT 인트로 2 -->
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="70dp"
-            android:paddingLeft="30dp"
-            android:paddingRight="30dp"
+
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/intro2_text1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="30dp"
+
                 android:text="실습실 예약 내역도"
                 android:textSize="24dp"
                 android:textColor="@color/colorAccent"
                 android:fontFamily="@font/noto_sans_kr_bold"
                 android:includeFontPadding="false"
+
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
                 />
             <TextView
+                android:id="@+id/intro2_text2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="30dp"
+
                 android:text="한 눈에"
                 android:textSize="24dp"
                 android:textColor="@color/natural_navy"
                 android:fontFamily="@font/noto_sans_kr_bold"
                 android:includeFontPadding="false"
+
+                app:layout_constraintTop_toBottomOf="@+id/intro2_text1"
+                app:layout_constraintLeft_toLeftOf="parent"
                 />
 
             <TextView
+                android:id="@+id/intro2_text3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
+                android:layout_marginLeft="30dp"
+
                 android:text="십슬실 예약 내역도 빠르게 확인할 수 있어요"
                 android:textSize="16dp"
                 android:textColor="@color/natural_navy"
                 android:fontFamily="@font/poppins_regular"
                 android:includeFontPadding="false"
+
+                app:layout_constraintTop_toBottomOf="@+id/intro2_text2"
+                app:layout_constraintLeft_toLeftOf="parent"
                 />
 
-            <View
-                android:layout_width="375dp"
-                android:layout_height="294dp"
-                android:layout_marginTop="150dp"
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:adjustViewBounds="true"
                 android:background="@drawable/ic_check_reservation"
-                />
-        </LinearLayout>
 
-        <LinearLayout
+                app:layout_constraintTop_toBottomOf="@+id/intro2_text3"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintVertical_bias="0.4"
+                />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+        <!-- LAYOUT END 인트로 2 -->
+
+
+        <!-- LAYOUT 인트로 3 -->
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="70dp"
             android:paddingLeft="30dp"
-            android:paddingRight="30dp"
-            android:orientation="vertical">
+            android:paddingRight="30dp">
 
             <TextView
+                android:id="@+id/intro3_text1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="실습실 시간표도"
@@ -141,8 +179,12 @@
                 android:textColor="@color/colorAccent"
                 android:fontFamily="@font/noto_sans_kr_bold"
                 android:includeFontPadding="false"
+
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
                 />
             <TextView
+                android:id="@+id/intro3_text2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="한 눈에"
@@ -150,37 +192,54 @@
                 android:textColor="@color/natural_navy"
                 android:fontFamily="@font/noto_sans_kr_bold"
                 android:includeFontPadding="false"
+
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/intro3_text1"
                 />
 
             <TextView
+                android:id="@+id/intro3_text3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:text="빈 강의실을 찾기 위해 돌아다닐 필요 없어요"
-                android:textSize="16dp"
-                android:textColor="@color/natural_navy"
                 android:fontFamily="@font/poppins_regular"
                 android:includeFontPadding="false"
-                />
 
-            <View
-                android:layout_width="277dp"
-                android:layout_height="218dp"
-                android:layout_marginTop="150dp"
+                android:text="빈 강의실을 찾기 위해 돌아다닐 필요 없어요"
+                android:textColor="@color/natural_navy"
+                android:textSize="16dp"
+
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/intro3_text2" />
+
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
                 android:layout_gravity="center"
-                android:background="@drawable/ic_check_timetable"
-                />
-        </LinearLayout>
 
-        <LinearLayout
+                android:adjustViewBounds="true"
+                android:src="@drawable/ic_check_timetable"
+
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/intro3_text3"
+                app:layout_constraintVertical_bias="0.4" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+        <!-- LAYOUT END 인트로 3 -->
+
+        <!-- LAYOUT 인트로 4 -->
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="70dp"
             android:paddingLeft="30dp"
-            android:paddingRight="30dp"
-            android:orientation="vertical">
+            android:paddingRight="30dp">
 
             <TextView
+                android:id="@+id/intro4_text1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="실습실 관리도"
@@ -188,8 +247,12 @@
                 android:textColor="@color/colorAccent"
                 android:fontFamily="@font/noto_sans_kr_bold"
                 android:includeFontPadding="false"
+
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
                 />
             <TextView
+                android:id="@+id/intro4_text2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="가능해요"
@@ -197,29 +260,46 @@
                 android:textColor="@color/natural_navy"
                 android:fontFamily="@font/noto_sans_kr_bold"
                 android:includeFontPadding="false"
+
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/intro4_text1"
                 />
 
             <TextView
+                android:id="@+id/intro4_text3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:text="조교를 위한\n실습실 시간표, 예약 신청 관리 기능까지 !"
-                android:textSize="16dp"
-                android:textColor="@color/natural_navy"
                 android:fontFamily="@font/poppins_regular"
                 android:includeFontPadding="false"
-                />
 
-            <View
-                android:layout_width="285dp"
-                android:layout_height="193dp"
-                android:layout_marginTop="150dp"
+                android:text="조교를 위한\n실습실 시간표, 예약 신청 관리 기능까지 !"
+                android:textColor="@color/natural_navy"
+                android:textSize="16dp"
+
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/intro4_text2" />
+
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
                 android:layout_gravity="center"
-                android:background="@drawable/ic_confirm_reservation"
-                />
-        </LinearLayout>
 
-        <LinearLayout
+                android:adjustViewBounds="true"
+                android:src="@drawable/ic_confirm_reservation"
+
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/intro4_text3"
+                app:layout_constraintVertical_bias="0.35" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+        <!-- LAYOUT END 인트로 4 -->
+
+        <!-- LAYOUT 인트로 5 -->
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="70dp"
@@ -228,6 +308,7 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/intro5_text1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="실습실 예약"
@@ -235,9 +316,12 @@
                 android:textColor="@color/colorAccent"
                 android:fontFamily="@font/noto_sans_kr_bold"
                 android:includeFontPadding="false"
+
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
                 />
             <TextView
-                android:id="@+id/infoTextView"
+                android:id="@+id/intro5_text2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="지금 바로 시작하세요"
@@ -245,21 +329,29 @@
                 android:textColor="@color/natural_navy"
                 android:fontFamily="@font/noto_sans_kr_bold"
                 android:includeFontPadding="false"
+
+                app:layout_constraintTop_toBottomOf="@+id/intro5_text1"
+                app:layout_constraintLeft_toLeftOf="parent"
                 />
 
-
-
             <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/mockupImage"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@+id/intro5_text2"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/learnMoreBtn"
+                android:paddingLeft="30dp"
+                android:paddingRight="30dp">
 
-                <View
+                <ImageView
                     android:id="@+id/ic_lab_start"
-                    android:layout_width="313dp"
-                    android:layout_height="375dp"
-                    android:layout_marginTop="70dp"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:background="@drawable/ic_lab_start"
+                    android:adjustViewBounds="true"
+                    android:src="@drawable/ic_lab_start"
 
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
@@ -281,31 +373,24 @@
 
             <com.airbnb.lottie.LottieAnimationView
                 android:id="@+id/learnMoreBtn"
-                android:layout_width="200dp"
+                android:layout_width="wrap_content"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
-                android:layout_marginTop="100dp"
                 android:scaleType="center"
 
                 app:lottie_rawRes="@raw/learn_more"
                 app:lottie_loop="true"
-                app:lottie_autoPlay="true"/>
+                app:lottie_autoPlay="true"
 
-        </LinearLayout>
+                app:layout_constraintTop_toBottomOf="@+id/mockupImage"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+        <!-- LAYOUT END 인트로 5 -->
     </ViewFlipper>
-
-<!--    <com.airbnb.lottie.LottieAnimationView-->
-<!--        android:id="@+id/nextBtn"-->
-<!--        android:layout_width="100dp"-->
-<!--        android:layout_height="25dp"-->
-<!--        android:layout_gravity="right"-->
-<!--        android:layout_marginBottom="40dp"-->
-<!--        android:layout_marginRight="20dp"-->
-<!--        android:scaleType="center"-->
-<!--        app:lottie_rawRes="@raw/next_arrow"-->
-<!--        app:lottie_loop="true"-->
-<!--        app:lottie_autoPlay="true"-->
-<!--        />-->
 
     <TextView
         android:id="@+id/master"
