--- a/app/src/main/res/layout/spinner_item_team.xml
+++ b/app/src/main/res/layout/spinner_item_team.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:text="1"
-    android:textSize="16dp"
+    android:textSize="16sp"
     android:textColor="@color/black_gray"
     android:fontFamily="@font/noto_sans_kr_regular"
     android:includeFontPadding="false"
