--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
 
     <color name="colorAccent">#00A8FF</color>
     <color name="light_blue">#E9F2FF</color>
+    <color name="semi_light_blue">#F0FAFF</color>
     <color name="gray">#D9D9D9</color>
     <color name="black_gray">#8B8B8B</color>
     <color name="semi_gray">#86909C</color>
